#101 - get people on project extra info