@@ -5,6 +5,7 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.stereotype.Service;
 import si.feri.itk.projectmanager.dto.model.person.PersonDto;
+import si.feri.itk.projectmanager.dto.model.person.PersonOnProjectDto;
 import si.feri.itk.projectmanager.dto.request.person.PersonListSearchParams;
 import si.feri.itk.projectmanager.dto.request.person.PersonSortInfoRequest;
 import si.feri.itk.projectmanager.dto.response.person.ListPersonResponse;
@@ -12,9 +13,11 @@ import si.feri.itk.projectmanager.exceptions.implementation.ItemNotFoundExceptio
 import si.feri.itk.projectmanager.mapper.PersonMapper;
 import si.feri.itk.projectmanager.model.person.Person;
 import si.feri.itk.projectmanager.model.person.PersonList;
+import si.feri.itk.projectmanager.model.person.PersonOnProject;
 import si.feri.itk.projectmanager.paging.PageInfo;
 import si.feri.itk.projectmanager.paging.SortInfo;
 import si.feri.itk.projectmanager.paging.request.PageInfoRequest;
+import si.feri.itk.projectmanager.repository.PersonOnProjectRepo;
 import si.feri.itk.projectmanager.repository.PersonRepo;
 import si.feri.itk.projectmanager.repository.ProjectRepo;
 import si.feri.itk.projectmanager.repository.personlist.PersonListRepo;
@@ -29,16 +32,18 @@ import java.util.stream.Collectors;
 public class PersonService {
     private final PersonRepo personRepo;
     private final ProjectRepo projectRepo;
+    private final PersonOnProjectRepo personOnProjectRepo;
     private final PersonListRepo personListRepo;
     public PersonDto getPersonById(UUID personId) {
         return personRepo.findById(personId).map(PersonMapper.INSTANCE::toDto).orElseThrow(() -> new ItemNotFoundException("Person not found"));
     }
 
-    public List<PersonDto> findPeopleOnProject(UUID projectId, HttpServletRequest servletRequest) {
+    public List<PersonOnProjectDto> findPeopleOnProject(UUID projectId, HttpServletRequest servletRequest) {
         String userId = RequestUtil.getUserIdStrict(servletRequest);
         projectRepo.findByIdAndOwnerId(projectId, userId).orElseThrow(() -> new ItemNotFoundException("Project not found"));
-        List<Person> people = personRepo.findAllByProjectId(projectId);
-        return people.stream().map(PersonMapper.INSTANCE::toDto).collect(Collectors.toList());
+        List<PersonOnProject> personOnProjects = personOnProjectRepo.findAllByProjectId(projectId);
+
+        return personOnProjects.stream().map(pop -> PersonMapper.INSTANCE.toDto(pop.getPerson(), pop)).toList();
     }
 
     public ListPersonResponse searchPeople(PageInfoRequest pageInfoRequest, PersonSortInfoRequest sortInfoRequest, PersonListSearchParams searchParams) {
